--- a/model/pom.xml
+++ b/model/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>modelD</artifactId>
+    <artifactId>model</artifactId>
 
     <dependencies>
 
@@ -30,16 +30,8 @@
             <artifactId>jackson-datatype-jsr310</artifactId>
             <!--        <scope>provided</scope>-->
         </dependency>
-        <dependency>
-            <groupId>io.swagger</groupId>
-            <artifactId>swagger-annotations</artifactId>
-            <version>RELEASE</version>
-        </dependency>
-        <dependency>
-            <groupId>io.swagger</groupId>
-            <artifactId>swagger-annotations</artifactId>
-            <version>RELEASE</version>
-        </dependency>
+
+
 
     </dependencies>
 </project>
