--- a/service-api/pom.xml
+++ b/service-api/pom.xml
@@ -14,7 +14,7 @@
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>modelD</artifactId>
+            <artifactId>mo</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
