--- a/service-rest-client/pom.xml
+++ b/service-rest-client/pom.xml
@@ -14,11 +14,11 @@
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>service-API</artifactId>
+            <artifactId>service-api</artifactId>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>testUtil</artifactId>
+            <artifactId>test-util</artifactId>
             <scope>test</scope>
         </dependency>
 
