--- a/test-util/pom.xml
+++ b/test-util/pom.xml
@@ -9,12 +9,12 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>testUtil</artifactId>
+    <artifactId>test-util</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>modelD</artifactId>
+            <artifactId>model</artifactId>
         </dependency>
 
         <dependency>
