--- a/service-rest-client/pom.xml
+++ b/service-rest-client/pom.xml
@@ -36,7 +36,7 @@
         </dependency>
 
         <!--Test-->
-        <dependency>
+<!--        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
@@ -45,7 +45,7 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
             <scope>test</scope>
-        </dependency>
+        </dependency>-->
 
         <!-- Logging with SLF4J & LogBack -->
         <dependency>
@@ -63,6 +63,7 @@
             <artifactId>logback-classic</artifactId>
             <scope>runtime</scope>
         </dependency>
+
         <dependency>
             <groupId>org.apache.tomcat</groupId>
             <artifactId>tomcat-servlet-api</artifactId>
