--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>model</module>
         <module>test-util</module>
         <module>server-soap</module>
+        <module>server-rest-camel</module>
 
 
     </modules>
