--- a/server-rest-camel/pom.xml
+++ b/server-rest-camel/pom.xml
@@ -12,7 +12,7 @@
     <packaging>war</packaging>
 
     <properties>
-        <camel.version>2.18.3</camel.version>
+        <camel.version>2.17.6</camel.version>
         <logback-version>1.1.2</logback-version>
     </properties>
 
@@ -36,7 +36,7 @@
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-test-spring</artifactId>
-            <version>2.18.3</version>
+            <version>${camel.version}</version>
         </dependency>
 
 
@@ -66,8 +66,12 @@
             <artifactId>repository</artifactId>
         </dependency>-->
         <dependency>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>test-util</artifactId>
+    </dependency>
+        <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>test-util</artifactId>
+            <artifactId>service-api</artifactId>
         </dependency>
 <!--        <dependency>
             <groupId>org.springframework</groupId>
@@ -92,6 +96,32 @@
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-spring</artifactId>
             <version>${camel.version}</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>spring-beans</artifactId>
+                    <groupId>org.springframework</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>spring-beans</artifactId>
+                    <groupId>org.springframework</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>spring-aop</artifactId>
+                    <groupId>org.springframework</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>spring-expression</artifactId>
+                    <groupId>org.springframework</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>spring-tx</artifactId>
+                    <groupId>org.springframework</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>spring-core</artifactId>
+                    <groupId>org.springframework</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.apache.camel</groupId>
@@ -112,12 +142,40 @@
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-sql</artifactId>
             <version>${camel.version}</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>spring-beans</artifactId>
+                    <groupId>org.springframework</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>spring-core</artifactId>
+                    <groupId>org.springframework</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>spring-core</artifactId>
+                    <groupId>org.springframework</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <!-- we need spring web -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
+            <exclusions>
+                <exclusion>
+                    <artifactId>spring-beans</artifactId>
+                    <groupId>org.springframework</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>spring-aop</artifactId>
+                    <groupId>org.springframework</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>spring-core</artifactId>
+                    <groupId>org.springframework</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
 
